nextCloud/nextCloud-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: default
spec:
  ports:
   - name: http
     port: 80
     targetPort: 80
     protocol: TCP
  selector:
    app: cheese
    task: nextcloud
